src/index.css
@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Bebas+Neue&family=Bigelow+Rules&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --primary: #6a59ff;
    --white: #ffffff;
    --bg: #f5f5f5;
}
.trapzoid {
    width: 350px;
    height: 500px;
    clip-path: polygon(
        0px 0%,
        calc(100% - 0px) 0%,
        90% 100%,
        0% 100%
    );
    background-image: url("./assets/Heros/Hero_1.webp");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.main {
    width: 100%;
    height: 100%;
    position: absolute;
        clip-path: polygon(0px 0%,
                calc(50% - 0px) 0%,
                90% 100%,
                0% 100%);
        background-image: url("./assets/Heros/Hero_1.webp");
        background-size: 50%;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        z-index: 0px;
}

.first-section-container{
    height: auto;
    width: 100%;
}
.ilearn-card {
    width: 100%;
    height: 100vh;
}
.third-section-container{
    width: 100%;
    height: 10%;
}
.third-section-details-container{
    position: relative;
    width: 100%;
    height: 100%;
}
@media (width <= 850px){
    .first-section-container img {
        height: auto;
        width: 100%;
    }
    .second-section-div{
        width: 100%;
    }
    .ilearn-card {
        width: 95%;
        height: 63vh;
    }
    .third-section-container img {
        width: 100%;
        height: auto;
    }
}
@media (width>= 768px){
    .second-section-div{
        width: 50%;
    }
    .ilearn-card {
        width: 21%;
        height: 63vh;
    }
    .subject-img{
        width: 40.66666667%;
        height: 45.6vh;
    }
    .details {
        height: 45.6vh;
        width: 57%;
    }
}






.scroll-container {
    overflow-y: auto;
    scrollbar-gutter: stable;
}
.scroll-container::-webkit-scrollbar {
    width: 0;
    height: 0;
}

.mother {
    display: flex;
    align-items: center;
    justify-content: center;
    height: fit-content;
    overflow: hidden;
}
.slide-image {
    display: block;
    width: 100%;
    height: 380px;
    object-fit: cover;
    border-radius: 10px;
}
.s-container{
    width: 100%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
}
.swiper-container{
    width: 100%;
    padding: 0px 280px 0px 230px;
    border-radius: 10px;
}
.swiper-slide{
    position: relative;
    width: 400px;
    height: 380px;
    border-radius: 10px;
    overflow: hidden;
    transition: 1s;
    user-select: none;
}
@media (width <= 430px) {
    .s-container{
        width: 100%;
        margin: 0 auto;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 10px;
    }


}
@media (width <= 430px) {
    .swiper-container{
        width: 98%;
        padding: 0px;
        border-radius: 10px;
    }
}

.swiper-slide-active{
    width: 600px;
    transition: width 1s ease-in-out;
    border: 3px solid white;
}
.swiper-slide img{
    position: absolute;
    inset: 0;
    filter: grayscale(90%);
}
.swiper-slide-active img{
    filter: grayscale(0%);
    transition: filter 0.5s ease-in-out;
}
.title{
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: end;
    padding: 25px 25px 30px;
}

.title h1{
    font-size: 24px;
    color: #FDFDFF;
    font-weight: 600;
    opacity: 1;
    transition: 0.8s ease;
    transition-delay: 1s;
}

.swiper-slide-active .title h1{
    opacity:0;
    transition-delay: -200s;
}
.content {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    padding: 25px 10px 65px;
    display: flex;
    flex-direction: column;
    justify-content: end;
    background: rgba(0, 0, 0, 0.5);
    background-image: linear-gradient(180deg, transition, transition, rgba(0,0,0,0.4), rgba(0,0,0,0.7));
    color: white;
    opacity: 0;
    z-index: 10;
}
.swiper-slide-active .content {
    opacity: 1;
    transition: opacity 0.5s ease 1s;
}

.text-box{
    border-left: 4px solid aqua;
    padding-left: 10px;
    margin-bottom: 8px;
    opacity: 0;
}

.swiper-slide-active .text-box{
    opacity: 1;
    transition: opacity 0.5s ease 1s;
}
.text-box p{
    font-size: 14px;
    font-weight: 400;
    line-height: 1.5;
    transform:  translateY(100%);
    opacity: 0;
}
.swiper-slide-active .text-box p{
    transform: translateY(0%);
    opacity: 1;
    transition: all 0.5s ease 1s;
}

.footer{
    position: absolute;
    bottom: 20px;
    left: 25px;
    width: calc(100% - 25px * 2);
    display: flex;
    align-items: center;
    justify-content: space-between;
    opacity: 0;
}

.swiper-slide-active .footer{
    opacity: 1;
    transition: opacity 0.5s ease 1.5s;
}
.category{
    font-weight: 300;
    letter-spacing: 1px;
    display: flex;
    gap: 25px;
}
.category span{
    color: white;
    font-size: 12px;
    padding: 5px 12px;
    border: 1px solid white;
    border-radius: 20px;
    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(8pc);
    background: rgba(255,255,255,0.2);
    opacity: 0;
}

.swiper-slide-active .category span{
    opacity: 1;
    transition: opacity 0.5s ease 1s;
}

